# doudou-bot

./: Cargo.toml  LICENSE  README.md
migrations/: 20230307050114_init.sql
scripts/: example.sh
src/: lib.rs  main.rs  scraper.rs  utils.rs
