[package]
name = "doudoubot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "process"] }
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = "0.11"
html_parser = "0.6.3"
dotenv = "0.15.0"
regex = "1"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "mysql", "time"] }
rand = "0.8.5"
